[package]
name = "pawse"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = "0.24"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
